fix typos in approvedCount/blockCount
Signed-off-by: Benjamin Cabé <benjamin@zephyrproject.org>

--- a/public/index.html
+++ b/public/index.html
@@ -112,12 +112,12 @@
 
       function approvedCount(count) {
         linkClass = count ? "approved" : "none";
-        return `<span class="${linkClass}">${count}</a>`;
+        return `<span class="${linkClass}">${count}</span>`;
       }
 
       function blockedCount(count) {
         linkClass = count ? "blocked" : "none";
-        return `<span class="${linkClass}">${count}</a>`;
+        return `<span class="${linkClass}">${count}</span>`;
       }
 
       function prLink(repo, pr, text) {
