--- a/public/index.html
+++ b/public/index.html
@@ -113,6 +113,11 @@
       rel="stylesheet"
       type="text/css"
       href="https://cdn.datatables.net/2.1.2/css/dataTables.jqueryui.min.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,700;1,400&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      rel="stylesheet" />
     <script
       type="text/javascript"
       charset="utf8"
