use "compact" style
Signed-off-by: Benjamin Cabé <benjamin@zephyrproject.org>

--- a/public/index.html
+++ b/public/index.html
@@ -85,7 +85,7 @@
       .prs caption {
         position: relative;
         z-index: -1;
-        font-size: 1.6rem;
+        font-size: 1.2rem;
         font-weight: bold;
         text-align: left;
         margin-bottom: 10px;
@@ -334,11 +334,11 @@
         list="usernames" />
       <datalist id="usernames"></datalist>
     </div>
-    <table id="author" class="prs display"></table>
-    <table id="blocking" class="prs display"></table>
-    <table id="assignee" class="prs display"></table>
-    <table id="reviewer" class="prs display"></table>
-    <table id="approved" class="prs display"></table>
-    <table id="commented" class="prs display"></table>
+    <table id="author" class="prs display compact"></table>
+    <table id="blocking" class="prs display compact"></table>
+    <table id="assignee" class="prs display compact"></table>
+    <table id="reviewer" class="prs display compact"></table>
+    <table id="approved" class="prs display compact"></table>
+    <table id="commented" class="prs display compact"></table>
   </body>
 </html>
