add LICENSE and copyright headers
Signed-off-by: Fabio Baltieri <fabiobaltieri@google.com>

--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,11 @@
 <!DOCTYPE html>
+
+<!--
+  Copyright 2024 Google LLC
+  Copyright (c) 2024, The Linux Foundation
+  SPDX-License-Identifier: Apache-2.0
+-->
+
 <html>
   <head>
     <style>
